Seeing if I fixed the scrollbar issue to have it hide if not needed and show if needed

--- a/css/pages.css
+++ b/css/pages.css
@@ -1,5 +1,7 @@
 /* body */
-.main {font-size:100%; position:absolute; padding-left:312px; top:0; width:100%; height:300%;}
+.main {position:fixed; font-size:100%; top:0; width:100%;}
+
+#body {position:fixed; height: 98.5%; width:80.5%; top:0; left:0; padding-top:10px; padding-left:312px; overflow-y: auto; display:none;}
 
 /* Body Color */
 .ng1 {background:#e6fff9;}
@@ -148,8 +150,8 @@
   box-shadow: none !important;
 }
 
-/* container */
-.container {width:265px; height:100%; margin-left:-5px; padding-right:25px; background: #f2f2f2 !important; color: #000000 !important;}
+/* My Panel */
+.myPanel {width:265px; height:100%; margin-left:-5px; padding-right:25px; background: #f2f2f2 !important; color: #000000 !important;}
 
 h2 {padding-top:5px;}
 
